# ultron-ai

./: .gitignore  pyproject.toml
.prompts/: README.md  architect.md  implement.md  refactor.md  review.md  verify.md
.skills/: README.md  architecture.md  backend.md  documentation.md  performance.md  python.md  review.md  security.md  testing.md
backend/app/: main.py
core/: __init__.py
core/context/: __init__.py  container.py  context.py
core/events/: __init__.py  bus.py
core/exceptions/: __init__.py
core/execution/: __init__.py  executor.py
core/interfaces/: __init__.py  event_bus.py  executor.py  memory.py  permission.py  planner.py  reasoner.py  repository.py  storage.py  tool.py  workflow.py
core/permissions/: __init__.py  manager.py
core/planner/: __init__.py  planner.py
core/reasoning/: __init__.py  reasoner.py
core/registry/: __init__.py
core/responses/: __init__.py
core/transport/: __init__.py  exceptions.py  (+1 more)
docs/: PROJECT_VISION.md  REQUIREMENTS.md  SYSTEM_ARCHITECTURE.md  TECH_STACK.md
models/: __init__.py  event.py  memory.py  permission.py  response.py  session.py  tool.py  user.py  workflow.py
monitoring/: __init__.py  health.py  metrics.py  performance.py  profiler.py  telemetry.py
prompts/: __init__.py  loader.py
services/: __init__.py
storage/: __init__.py  base.py
tests/: test_ai_config.py  test_architecture.py  test_di_lifecycle.py  test_http_transport.py  test_model_manager.py  test_provider_registry.py
tools/: __init__.py  base.py  exceptions.py  executor.py  manager.py  permissions.py  registry.py  schemas.py
(+70 files in other folders)
