[project]
name = "ultron-ai"
version = "0.1.0"
description = "ULTRON AI - A local-first autonomous AI operating system foundation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
    "anyio>=3.7.0",
    "jinja2>=3.0.0",
]


[project.optional-dependencies]
vector = [
    "chromadb>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
